--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,5 +13,5 @@
 html,
 body {
   font-family: var(--font-primary);
-  background-color: var(--color-tcCrimsonDark);
+  background-color: white;
 }
